--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
-    "framer-motion": "^7.6.19",
+    "framer-motion": "^7.10.3",
     "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-leaf-carousel": "^3.0.0",
     "react-router-dom": "^6.4.4",
     "react-scripts": "^5.0.1",
     "styled-components": "^5.3.6",
