--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "bootstrap": "^5.2.3",
     "eslint-plugin-prettier": "^4.2.1",
     "framer-motion": "^7.10.3",
-    "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
@@ -27,7 +26,8 @@
     "react-router-dom": "^6.4.4",
     "react-scripts": "^5.0.1",
     "styled-components": "^5.3.6",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "homepage": "http://ndbzika.github.io/"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -38,7 +38,9 @@
     "lint:fix": "npm run lint -- --fix",
     "prettier": "npx prettier src test --check",
     "prettier:fix": "npm run prettier -- --write",
-    "format": "npm run prettier:fix && npm run lint:fix"
+    "format": "npm run prettier:fix && npm run lint:fix",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "eslintConfig": {
     "extends": [
@@ -59,6 +61,7 @@
     ]
   },
   "devDependencies": {
-    "eslint-config-prettier": "^8.6.0"
+    "eslint-config-prettier": "^8.6.0",
+    "gh-pages": "^5.0.0"
   }
 }
