--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
+    "styled-components": "^6.1.0",
     "typescript": "5.1.3"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@swc/plugin-styled-components": "^1.5.94",
+    "babel-plugin-styled-components": "^2.1.4"
+  }
 }
