--- a/package.json
+++ b/package.json
@@ -9,17 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fontsource/jura": "^5.0.17",
+    "@fontsource/just-another-hand": "^5.0.8",
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
+    "gsap": "^3.12.3",
     "next": "13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
     "styled-components": "^6.1.0",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
     "@swc/plugin-styled-components": "^1.5.94",
