--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@fontsource/jura": "^5.0.17",
     "@fontsource/just-another-hand": "^5.0.8",
     "@fontsource/kodchasan": "^5.0.17",
     "@fontsource/rubik": "^5.0.17",
+    "@mui/material": "^5.14.20",
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
@@ -24,8 +27,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
     "styled-components": "^6.1.0",
-    "typescript": "5.1.3",
-    "usehooks-ts": "^2.9.1"
+    "typescript": "5.1.3"
   },
   "devDependencies": {
     "@swc/plugin-styled-components": "^1.5.94",
