--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@fontsource/kodchasan": "^5.0.17",
     "@fontsource/rubik": "^5.0.17",
     "@mui/material": "^5.14.20",
-    "@types/node": "20.2.5",
+    "@types/node": "^20.11.28",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
     "eslint": "8.41.0",
