--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/raleway": "^5.0.19",
     "@fontsource/titillium-web": "^5.0.20",
+    "@gsap/react": "^2.1.1",
     "@mui/material": "^5.14.20",
     "@types/node": "^20.11.28",
     "@types/react": "18.2.8",
